= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/sysexits-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.6.1\...HEAD[Unreleased]

=== Changed

* Call Docker images directly ({pull-request-url}/32[#32])
* Change the comment header to the format recommended by the REUSE
  Specification ({pull-request-url}/33[#33])

== {compare-url}/v0.6.0\...v0.6.1[0.6.1] - 2023-06-22

=== Added

* Add Linting Workflow for GHA Workflows ({pull-request-url}/31[#31])

== {compare-url}/v0.5.0\...v0.6.0[0.6.0] - 2023-05-15

=== Added

* Add methods to get error details
* Add `impl From<std::io::Error> for ExitCode` ({pull-request-url}/28[#28])

=== Changed

* Replace `impl TryFrom<std::io::ErrorKind> for ExitCode` with
  `impl From<std::io::ErrorKind> for ExitCode`

=== Removed

* Remove `TryFromErrorKindError`

== {compare-url}/v0.4.1\...v0.5.0[0.5.0] - 2023-04-01

=== Added

* Add release checklist ({pull-request-url}/16[#16])
* Implement `PartialEq` and `Eq` for `ExitCode` ({pull-request-url}/19[#19])
* Add `ExitCode` based `Result` type and unit test ({pull-request-url}/21[#21])
* Implement `Error` for `ExitCode` ({pull-request-url}/23[#23])

=== Changed

* Rename `FromErrorKindError` to `TryFromErrorKindError`
* Rename `FromExitStatusError` to `TryFromExitStatusError`

== {compare-url}/v0.4.0\...v0.4.1[0.4.1] - 2023-01-28

=== Fixed

* Fix conversion from `std::process::ExitStatus` if the process was terminated
  by a signal
* Fix conversion from `std::io::ErrorKind` to return `ExitCode::NoInput` if
  error kind is `ErrorKind::NotFound`

== {compare-url}/v0.3.4\...v0.4.0[0.4.0] - 2022-12-29

=== Added

* Add conversions to primitive integer types