@@ -1,0 +1,25 @@
+# SPDX-FileCopyrightText: 2022-2023 Shun Sakai and Contributors
+#
+# SPDX-License-Identifier: Apache-2.0 OR MIT
+
+name: REUSE Compliance Check
+
+on:
+  push:
+    branches:
+      - '**'
+    tags-ignore:
+      - '**'
+  pull_request:
+  schedule:
+      - cron: '0 0 * * 0'
+
+jobs:
+  reuse:
+    name: REUSE
+    runs-on: ubuntu-22.04
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: REUSE Compliance Check
+      uses: fsfe/reuse-action@v2.0.0
