@@ -1,3 +1,7 @@
+// SPDX-FileCopyrightText: 2022-2023 Shun Sakai and Contributors
+//
+// SPDX-License-Identifier: Apache-2.0 OR MIT
+
 = Contribution Guide
 :git-flow-url: https://nvie.com/posts/a-successful-git-branching-model/
 :commit-messages-guide-url: https://github.com/RomuloOliveira/commit-messages-guide
