@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022-2023 Shun Sakai and Contributors
+#
+# SPDX-License-Identifier: Apache-2.0 OR MIT
+
 [package]
 name = "sysexits"
 version = "0.6.1"
@@ -13,6 +17,7 @@ keywords = ["exitcode", "sysexits"]
 categories = ["command-line-interface", "no-std", "os"]
 exclude = [
   "/.bumpversion.cfg",
+  "/.bumpversion.cfg.license",
   "/.github",
   "/CITATION.cff",
   "/clippy.toml",
