@@ -1,3 +1,7 @@
+// SPDX-FileCopyrightText: 2022-2023 Shun Sakai and Contributors
+//
+// SPDX-License-Identifier: Apache-2.0 OR MIT
+
 = Examples
 
 link:isutf8.rs[]::
